<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SISTEM PENYIRAMAN TANAMAN OTOMATIS</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lihat_password">Lihat Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
</resources>
